{
    "name": "Input",
    "maps": [
        {
            "name": "InputPad",
            "id": "9808ad0b-bd04-4f9f-b09b-9eb92c64c4c9",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "36c5b04b-d0e8-4e50-b318-3771e31221ac",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "3a989384-a630-4276-9c5b-be360a34cfe8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "JetPack",
                    "type": "Button",
                    "id": "5e1a005f-757f-413e-82a0-3d54affb9ea6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "410a7e9f-0644-4639-8346-3d3bb37cb43d",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9eb20b12-969d-441f-8068-c90d289a930e",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b8c3a9c-c1f8-4cc8-b2d0-4773bc509496",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JetPack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Keyboard",
            "id": "9abe50eb-b678-4bb1-8c08-7e8728fcccc8",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "4dc8adef-4d26-4eca-b6ac-7da17e8ed199",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "JetPack",
                    "type": "Button",
                    "id": "8f964392-aae3-44ee-939e-04718f66b550",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RunLeft",
                    "type": "Button",
                    "id": "657c927f-cb12-455e-82f8-6f9f95eb7d2c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RunRight",
                    "type": "Button",
                    "id": "ad8cde03-5706-4d03-a3b3-26e6033327ad",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "867759e7-6d24-46d4-ac46-0042aad807e3",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "079d4e51-aef9-4aff-bdbc-beb08be220d7",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JetPack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f59bed40-1b79-4fff-b981-63914c00ddbf",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RunLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "65bdd51e-0fb7-4f2d-b8db-da28f1d83ab5",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RunRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}